Se actualiza el titulo de la página y el icon

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redireccionando...</title>
+    <link rel="icon" href="img/icon.ico">
+    <title>Sneak Empire</title>
     <script>
-        // Redirige al usuario a la página "inicio.html" dentro de la carpeta "html"
+        // Redirige al usuario a la página "inicio.html"
         window.location.href = "html/inicio.html";
     </script>
 </head>
