--- a/html/inicio.html
+++ b/html/inicio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../img/icon.ico">
     <title>Sneak Empire</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/header_style.css">
 </head>
 <body>
     <script src="../js/header.js"></script>
