--- a/html/inicio.html
+++ b/html/inicio.html
@@ -6,11 +6,66 @@
     <link rel="icon" href="../img/icon.ico">
     <title>Sneak Empire</title>
     <link rel="stylesheet" href="../css/header_style.css">
+    <link rel="stylesheet" href="../css/footer_style.css">
 </head>
 <body>
     <script src="../js/header.js"></script>
     <script>
         loadHeader();
     </script>
+    <main>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+    </main>
+    <script src="../js/footer.js"></script>
+    <script>
+        loadFooter();  
+      </script>
 </body>
 </html>
