Añade estilos y script para el banner en la página de inicio

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -7,6 +7,7 @@
     <title>Sneak Empire</title>
     <link rel="stylesheet" href="../css/header_style.css">
     <link rel="stylesheet" href="../css/footer_style.css">
+    <link rel="stylesheet" href="../css/banner_style.css">
 </head>
 <body>
     <script src="../js/header.js"></script>
@@ -14,54 +15,10 @@
         loadHeader();
     </script>
     <main>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+        <script src="../js/banner.js"></script>
+        <script>
+            loadBanner();
+        </script>
     </main>
     <script src="../js/footer.js"></script>
     <script>
