Actualiza el enlace de la hoja de estilos a 'forms_style.css' y corrige el enlace de registro en la página de inicio de sesión

--- a/html/login.html
+++ b/html/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../img/icon.ico">
     <title>Sneak Empire</title>
-    <link rel="stylesheet" href="../css/login_style.css">
+    <link rel="stylesheet" href="../css/forms_style.css">
 </head>
 <body>
     <div class="container">
@@ -72,7 +72,7 @@
                     </button>
 
                     <p class="signup-text">
-                        ¿Eres nuevo? <a href="/signup" class="signup-link">Regístrate</a>
+                        ¿Eres nuevo? <a href="../html/registro.html" class="signup-link">Regístrate</a>
                     </p>
                 </form>
             </div>
@@ -84,7 +84,7 @@
                         <line x1="12" y1="8" x2="12" y2="12"/>
                         <line x1="12" y1="16" x2="12.01" y2="16"/>
                     </svg>
-                    <p>Correo electrónico o contraseña inválidos. Por favor, inténtelo de nuevo.</p>
+                    <p>Correo electrónico o contraseña inválidos</p>
                 </div>
             </div>
         </div>
