Añade lógica de animaciones y efectos en la página "Nosotros" y actualiza enlaces en el encabezado y pie de página

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../img/icon.ico">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="../img/icon.ico" />
     <title>Sneak Empire</title>
-    <link rel="stylesheet" href="../css/header_style.css">
-    <link rel="stylesheet" href="../css/footer_style.css">
-    <link rel="stylesheet" href="../css/banner_style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../css/header_style.css" />
+    <link rel="stylesheet" href="../css/footer_style.css" />
+    <link rel="stylesheet" href="../css/banner_style.css" />
+  </head>
+  <body>
     <script src="../js/header.js"></script>
     <script>
-        loadHeader();
+      loadHeader();
     </script>
     <main>
-        <script src="../js/banner.js"></script>
-        <script>
-            loadBanner();
-        </script>
+      <script src="../js/banner.js"></script>
+      <script>
+        loadBanner();
+      </script>
     </main>
     <script src="../js/footer.js"></script>
     <script>
-        loadFooter();  
-      </script>
-</body>
+      loadFooter();
+    </script>
+  </body>
 </html>
