Corrige el título en la página de contacto y añade un enlace al título en la página de registro

--- a/html/registro.html
+++ b/html/registro.html
@@ -12,7 +12,9 @@
     <div class="form-card" style="max-width: 28rem;">
       <div class="header">
         <div class="header-content">
-          <h1>Sneak Empire</h1>
+          <a href="../index.html" class="header-link">
+            <h1>Sneak Empire</h1>
+          </a>
         </div>
       </div>
 
