--- a/html/contacto.html
+++ b/html/contacto.html
@@ -18,7 +18,7 @@
     <main>
       <section class="contact-hero">
         <div class="hero-content">
-          <h1 class="fade-in">Contáctenos</h1>
+          <h1 class="fade-in">Contáctanos</h1>
           <p class="fade-in">Nos encantaría escuchar tu opinión</p>
         </div>
       </section>
