El código se comenta y se añaden ventanas modales

--- a/html/redes.html
+++ b/html/redes.html
@@ -33,23 +33,23 @@
                 </div>
 
                 <div class="social-feed" id="socialFeed">
-                    <!-- Posts will be dynamically inserted here -->
+                    <!-- Los mensajes se insertarán dinámicamente aquí  -->
                 </div>
 
                 <button id="loadMoreBtn" class="load-more-btn">
-                    <span class="button-text">Load More</span>
+                    <span class="button-text">Cargar más</span>
                     <span class="loading-spinner hidden"></span>
                 </button>
             </div>
         </section>
     </main>
 
-    <!-- Post Modal -->
+    <!-- Modal para las publicaciones -->
     <div id="postModal" class="modal">
         <div class="modal-content">
             <span class="close-modal">&times;</span>
             <div class="modal-body">
-                <!-- Modal content will be dynamically inserted here -->
+                <!-- El contenido modal se insertará dinámicamente aquí -->
             </div>
         </div>
     </div>
