--- a/html/inicio.html
+++ b/html/inicio.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Sneak Empire es una tienda en línea que vende todo tipo de zapatillas.">
     <link rel="icon" href="../img/icon.ico" />
     <title>Sneak Empire</title>
     <link rel="stylesheet" href="../css/header_style.css" />
