--- a/html/carrito.html
+++ b/html/carrito.html
@@ -1,277 +1,297 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        body{
-            margin: 0;
-            padding: 0;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+    }
 
-        #slideCart {
-            display: flex;
-            flex-direction: column;
-            position: fixed;
-            top: 0;
-            right: 0;
-            width: 500px;
-            height: 100vh;        
-            padding: 20px 20px 20px 30px;
-            justify-content: space-between;
-            border: 1px solid rgba(0, 0, 0, 0.3);
-            box-shadow: 0px 4px 4px #000000;
-        }
+    #slideCart {
+      display: flex;
+      flex-direction: column;
+      position: fixed;
+      top: 0;
+      right: 0;
+      width: 500px;
+      height: 100vh;
+      padding: 20px 20px 20px 30px;
+      justify-content: space-between;
+      border: 1px solid rgba(0, 0, 0, 0.3);
+      box-shadow: 0px 4px 4px #000000;
+    }
 
-        #title {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
+    #title {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
 
-            height: 30px;
-            font-size: 12px;
-            line-height: 15px;
-            align-items: center;
-        }        
+      height: 30px;
+      font-size: 12px;
+      line-height: 15px;
+      align-items: center;
+    }
 
-        #buttonCloseSlide {
-            background-color: transparent;
-            border-color: transparent;
-            font-size: 20px;
-            border-radius: 40px;
-        }
+    #buttonCloseSlide {
+      background-color: transparent;
+      border-color: transparent;
+      font-size: 20px;
+      border-radius: 40px;
+    }
 
-        #buttonCloseSlide:hover {
-            /* Cambia el fondo cuando el mouse está sobre el botón */
-            background: rgb(241, 241, 241);   
-        } 
+    #buttonCloseSlide:hover {
+      /* Cambia el fondo cuando el mouse está sobre el botón */
+      background: rgb(241, 241, 241);
+    }
 
-        #containerCard {
-            display: flex;
-            position: relative;
-            height: 100%;            
-            flex-direction: column;
-            overflow-y: auto; /* Esto agrega la barra de desplazamiento vertical */
-        }
+    #containerCard {
+      display: flex;
+      position: relative;
+      height: 100%;
+      flex-direction: column;
+      overflow-y: auto;
+      /* Esto agrega la barra de desplazamiento vertical */
+    }
 
-        .card {
-            border-radius: 10px;
-            display: flex;
-            flex-direction: row;
-            background: #FFFFFF;
-            border: 1px solid rgba(0, 0, 0, 0.2);
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);            
-            height: 222px;
-            padding: 20px;
-            margin: 20px 0px 0px 0px;
-            justify-content: space-between;
-            min-height: 222px;
-        }
+    .card {
+      border-radius: 10px;
+      display: flex;
+      flex-direction: row;
+      background: #ffffff;
+      border: 1px solid rgba(0, 0, 0, 0.2);
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      height: 222px;
+      padding: 20px;
+      margin: 20px 0px 0px 0px;
+      justify-content: space-between;
+      min-height: 222px;
+    }
 
-        .imageCard {
-            height: 120px;
-            width: 120px;            
-        }
+    .imageCard {
+      height: 120px;
+      width: 120px;
+    }
 
-        #productInformation {
-            width: 320px;
-            display: grid;
-            grid-template-columns: 205px 80px;
-            grid-template-rows: 60px 60px 50px auto;
-            justify-content: space-between;            
-            align-items: start;            
-        }
+    #productInformation {
+      width: 320px;
+      display: grid;
+      grid-template-columns: 205px 80px;
+      grid-template-rows: 60px 60px 50px auto;
+      justify-content: space-between;
+      align-items: start;
+    }
 
-        #productInformation div {
-            word-wrap: break-word; /* Permite que el texto largo se ajuste */
-            width: 100%;
-        }
-        /*24 caracteres*/
-        #name {
-            font-size: 20px;
-            overflow-y: auto; /* Esto agrega la barra de desplazamiento vertical */
-            overscroll-behavior: contain; /* Evita que el scroll del padre se active */
-            max-height: 60px; /* Limita la altura del div */
-        }
-	
-        #name::-webkit-scrollbar {
-            width: 8px; /* Ancho de la barra de desplazamiento */
-        }
+    #productInformation div {
+      word-wrap: break-word;
+      /* Permite que el texto largo se ajuste */
+      width: 100%;
+    }
 
-        #name::-webkit-scrollbar-thumb {
-            background: black; /* Color del pulgar de la barra de desplazamiento */
-            border-radius: 4px; /* Radio del borde del pulgar */
-        }
+    /*24 caracteres*/
+    #name {
+      font-size: 20px;
+      overflow-y: auto;
+      /* Esto agrega la barra de desplazamiento vertical */
+      overscroll-behavior: contain;
+      /* Evita que el scroll del padre se active */
+      max-height: 60px;
+      /* Limita la altura del div */
+    }
 
-        #price {
-            font-size: 19px;
-        }
+    #name::-webkit-scrollbar {
+      width: 8px;
+      /* Ancho de la barra de desplazamiento */
+    }
 
-        #color {
-            margin: 5px 0px 0px 0px;
-            font-size: 14px;
-        }
+    #name::-webkit-scrollbar-thumb {
+      background: black;
+      /* Color del pulgar de la barra de desplazamiento */
+      border-radius: 4px;
+      /* Radio del borde del pulgar */
+    }
 
-        #size {
-            margin: 5px 0px 0px 0px;
-            font-size: 13px;
-        }
+    #price {
+      font-size: 19px;
+    }
 
-        #amount {
-            width: 80px;
-            height: 30px;
-            font-size: 14px;
-            border: 1px solid rgba(0, 0, 0, 0.2);
-            border-radius: 5px;
-        }
+    #color {
+      margin: 5px 0px 0px 0px;
+      font-size: 14px;
+    }
 
-        #delete {
-            width: 20px;
-            height: 20px;
-            cursor: pointer;
-        }
+    #size {
+      margin: 5px 0px 0px 0px;
+      font-size: 13px;
+    }
 
-        #purchaseSummary {
-            display: flex;
-            flex-direction: column;  
-            align-items: center;    
-        }
+    #amount {
+      width: 80px;
+      height: 30px;
+      font-size: 14px;
+      border: 1px solid rgba(0, 0, 0, 0.2);
+      border-radius: 5px;
+    }
 
-        #purchaseInformation {
-            width: 100%; /* Asegura que la tabla ocupe todo el espacio disponible */
-            border-collapse: collapse; /* Opcional, pero elimina los espacios entre las celdas */
-        }
+    #delete {
+      width: 20px;
+      height: 20px;
+      cursor: pointer;
+    }
 
-        #purchaseInformation td {
-            padding: 0; /* Elimina el padding de las celdas */
-        }
+    #purchaseSummary {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
 
-        #purchaseInformation td:first-child {
-            text-align: left; /* Alinea el contenido de la primera celda a la izquierda */
-        }
+    #purchaseInformation {
+      width: 100%;
+      /* Asegura que la tabla ocupe todo el espacio disponible */
+      border-collapse: collapse;
+      /* Opcional, pero elimina los espacios entre las celdas */
+    }
 
-        #purchaseInformation td:last-child {
-            text-align: right; /* Alinea el contenido de la segunda celda a la derecha */
-        }
-        
-        #buttonContinuarCompra {
-            width: 470px;
-            height: 45px;
+    #purchaseInformation td {
+      padding: 0;
+      /* Elimina el padding de las celdas */
+    }
 
-            color: white;
-            background: rgba(0, 0, 0, 0.9);
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-            border-radius: 20px;   
-            margin: 0px 0px 10px 0px;   
-            font-size: 17px;  
-        }
+    #purchaseInformation td:first-child {
+      text-align: left;
+      /* Alinea el contenido de la primera celda a la izquierda */
+    }
 
-        #buttonContinuarCompra:hover {
-            background: rgba(0, 0, 0, 0.83);   
-        }    
+    #purchaseInformation td:last-child {
+      text-align: right;
+      /* Alinea el contenido de la segunda celda a la derecha */
+    }
 
-        #verCarrito {
-            color: #000000;
-            text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-            font-size: 14px;
-        }
-    </style>
+    #buttonContinuarCompra {
+      width: 470px;
+      height: 45px;
+
+      color: white;
+      background: rgba(0, 0, 0, 0.9);
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      border-radius: 20px;
+      margin: 0px 0px 10px 0px;
+      font-size: 17px;
+    }
+
+    #buttonContinuarCompra:hover {
+      background: rgba(0, 0, 0, 0.83);
+    }
+
+    #verCarrito {
+      color: #000000;
+      text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      font-size: 14px;
+    }
+  </style>
 </head>
+
 <body>
-    <nav id="slideCart">
-        <div id="title">
-            <h2>Mi carrito de compras</h2>
-            <button id="buttonCloseSlide">X</button>
+  <nav id="slideCart">
+    <div id="title">
+      <h2>Mi carrito de compras</h2>
+      <button id="buttonCloseSlide">X</button>
+    </div>
+    <div id="containerCard">
+      <div class="card">
+        <div>
+          <a href="">
+            <img src="/img/post-2.webp" alt="" class="imageCard" />
+          </a>
         </div>
-        <div id="containerCard">                       
-            <div class="card">
-                <div>
-                    <a href="">
-                        <img src="/img/post-2.webp" alt="" class="imageCard">
-                    </a>    
-                </div>                
-                <div id="productInformation">
-                    <div id="name"><strong>ada</strong></div>
-                    <div id="price"><Strong>12346789</Strong></div>
-                    <div id="color">BLANCO</div>
-                    <img src="" alt="" id="delete">
-                    <div id="size">TALA</div>
-                    <div class="relleno"></div>
-                    <input type="number" min="1" max="100" step="1" id="amount">
-                </div>
-            </div>   
-            <div class="card">
-                <div>
-                    <a href="">
-                        <img src="/img/post-2.webp" alt="" class="imageCard">
-                    </a>    
-                </div>                
-                <div id="productInformation">
-                    <div id="name"><strong>ada</strong></div>
-                    <div id="price"><Strong>12346789</Strong></div>
-                    <div id="color">BLANCO</div>
-                    <img src="" alt="" id="delete">
-                    <div id="size">TALA</div>
-                    <div class="relleno"></div>
-                    <input type="number" min="1" max="100" step="1" id="amount">
-                </div>
-            </div>   
-            <div class="card">
-                <div>
-                    <a href="">
-                        <img src="/img/post-2.webp" alt="" class="imageCard">
-                    </a>    
-                </div>                
-                <div id="productInformation">
-                    <div id="name"><strong>ada</strong></div>
-                    <div id="price"><Strong>12346789</Strong></div>
-                    <div id="color">BLANCO</div>
-                    <img src="" alt="" id="delete">
-                    <div id="size">TALA</div>
-                    <div class="relleno"></div>
-                    <input type="number" min="1" max="100" step="1" id="amount">
-                </div>
-            </div> <div class="card">
-                <div>
-                    <a href="">
-                        <img src="/img/post-2.webp" alt="" class="imageCard">
-                    </a>    
-                </div>                
-                <div id="productInformation">
-                    <div id="name"><strong>ada</strong></div>
-                    <div id="price"><Strong>12346789</Strong></div>
-                    <div id="color">BLANCO</div>
-                    <img src="" alt="" id="delete">
-                    <div id="size">TALA</div>
-                    <div class="relleno"></div>
-                    <input type="number" min="1" max="100" step="1" id="amount">
-                </div>
-            </div> 
+        <div id="productInformation">
+          <div id="name"><strong>ada</strong></div>
+          <div id="price"><strong>12346789</strong></div>
+          <div id="color">BLANCO</div>
+          <img src="" alt="" id="delete" />
+          <div id="size">TALA</div>
+          <div class="relleno"></div>
+          <input type="number" min="1" max="100" step="1" id="amount" />
         </div>
-        <div id="purchaseSummary">       
-            <table id="purchaseInformation">
-                <tr>
-                    <td>
-                        <p>Costo de envio</p>
-                    </td>
-                    <td>
-                        <p id="shippingCost">Por calcular</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <p>Total estimado</p>
-                    </td>
-                    <td>
-                        <p id="estimatedTotal">S/ 0.00</p>
-                    </td>
-                </tr>
-            </table>   
-            <button type="button" id="buttonContinuarCompra"><strong>CONTINUAR COMPRA</strong></button>
-            <a href="" id="verCarrito"><strong>VER CARRITO</strong></a>
-            <p></p>               
-        </div>        
-    </nav>
+      </div>
+      <div class="card">
+        <div>
+          <a href="">
+            <img src="/img/post-2.webp" alt="" class="imageCard" />
+          </a>
+        </div>
+        <div id="productInformation">
+          <div id="name"><strong>ada</strong></div>
+          <div id="price"><strong>12346789</strong></div>
+          <div id="color">BLANCO</div>
+          <img src="" alt="" id="delete" />
+          <div id="size">TALA</div>
+          <div class="relleno"></div>
+          <input type="number" min="1" max="100" step="1" id="amount" />
+        </div>
+      </div>
+      <div class="card">
+        <div>
+          <a href="">
+            <img src="/img/post-2.webp" alt="" class="imageCard" />
+          </a>
+        </div>
+        <div id="productInformation">
+          <div id="name"><strong>ada</strong></div>
+          <div id="price"><strong>12346789</strong></div>
+          <div id="color">BLANCO</div>
+          <img src="" alt="" id="delete" />
+          <div id="size">TALA</div>
+          <div class="relleno"></div>
+          <input type="number" min="1" max="100" step="1" id="amount" />
+        </div>
+      </div>
+      <div class="card">
+        <div>
+          <a href="">
+            <img src="/img/post-2.webp" alt="" class="imageCard" />
+          </a>
+        </div>
+        <div id="productInformation">
+          <div id="name"><strong>ada</strong></div>
+          <div id="price"><strong>12346789</strong></div>
+          <div id="color">BLANCO</div>
+          <img src="" alt="" id="delete" />
+          <div id="size">TALA</div>
+          <div class="relleno"></div>
+          <input type="number" min="1" max="100" step="1" id="amount" />
+        </div>
+      </div>
+    </div>
+    <div id="purchaseSummary">
+      <table id="purchaseInformation">
+        <tr>
+          <td>
+            <p>Costo de envio</p>
+          </td>
+          <td>
+            <p id="shippingCost">Por calcular</p>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <p>Total estimado</p>
+          </td>
+          <td>
+            <p id="estimatedTotal">S/ 0.00</p>
+          </td>
+        </tr>
+      </table>
+      <button type="button" id="buttonContinuarCompra">
+        <strong>CONTINUAR COMPRA</strong>
+      </button>
+      <a href="" id="verCarrito"><strong>VER CARRITO</strong></a>
+      <p></p>
+    </div>
+  </nav>
 </body>
+
 </html>
