Añade estilo a la clase fade-in-2 y cambia el párrafo a un encabezado para mejorar la presentación del contenido en la sección de redes sociales

--- a/html/redes.html
+++ b/html/redes.html
@@ -14,7 +14,7 @@
         <section class="social-hero">
             <div class="hero-content">
                 <h1 class="fade-in">Redes Sociales</h1>
-                <p class="fade-in">Manténgase conectado con Sneak Empire</p>
+                <h2 class="fade-in-2">Manténgase conectado con Sneak Empire</h2>
             </div>
         </section>
 
