Añade estilo a la clase fade-in-2 y cambia el párrafo a un encabezado para mejorar la presentación del contenido en la sección de contacto

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -14,7 +14,7 @@
       <section class="contact-hero">
         <div class="hero-content">
           <h1 class="fade-in">Contáctanos</h1>
-          <p class="fade-in">Nos encantaría escuchar tu opinión</p>
+          <h2 class="fade-in-2">Nos encantaría escuchar tu opinión</h2>
         </div>
       </section>
 
