--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -14,7 +14,7 @@
       <section class="hero">
         <div class="hero-content">
           <h1 class="fade-in">Bienvenido a Sneak Empire</h1>
-          <p class="fade-in">Donde el estilo se encuentra con la comodidad</p>
+          <h2 class="fade-in-2">Donde el estilo se encuentra con la comodidad</h2>
         </div>
       </section>
 
