--- a/html/contacto.html
+++ b/html/contacto.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="../img/icon.ico" />
     <title>Sneak Empire</title>
+    <link rel="stylesheet" href="../css/slide_cart_style.css">
     <link rel="stylesheet" href="../css/contacto_style.css" />
     <link rel="stylesheet" href="../css/header_style.css" />
     <link rel="stylesheet" href="../css/footer_style.css" />
@@ -151,6 +152,10 @@
         <button class="close-notification">×</button>
       </div>
     </div>
+    <script src="../js/cart.js"></script>
+    <script>
+      loadSlideCart();
+    </script>
     <script src="../js/footer.js"></script>
     <script>
       loadFooter();
