--- a/html/inicio.html
+++ b/html/inicio.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Sneak Empire es una tienda en línea que vende todo tipo de zapatillas.">
     <link rel="icon" href="../img/icon.ico" />
     <title>Sneak Empire</title>
+    <link rel="stylesheet" href="../css/slide_cart_style.css">
     <link rel="stylesheet" href="../css/header_style.css" />
     <link rel="stylesheet" href="../css/footer_style.css" />
     <link rel="stylesheet" href="../css/banner_style.css" />
@@ -13,10 +14,14 @@
   <body>
     <main>
       <script src="../js/banner.js"></script>
-      <script>
+      <script>        
         loadBanner();
       </script>
     </main>
+    <script src="../js/cart.js"></script>
+      <script>
+        loadSlideCart();
+      </script>
     <script src="../js/footer.js"></script>
     <script>
       loadFooter();
