--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="../img/icon.ico" />
     <title>Sneak Empire</title>
+    <link rel="stylesheet" href="../css/slide_cart_style.css">
     <link rel="stylesheet" href="../css/nosotros_style.css" />
     <link rel="stylesheet" href="../css/header_style.css" />
     <link rel="stylesheet" href="../css/footer_style.css" />
@@ -132,6 +133,10 @@
         </div>
       </section>
     </main>
+    <script src="../js/cart.js"></script>
+      <script>
+        loadSlideCart();
+      </script>
     <script src="../js/footer.js"></script>
     <script>
       loadFooter();
