Correcion de estilos

--- a/html/cart.html
+++ b/html/cart.html
@@ -5,79 +5,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../img/icon.ico">
-    <title>Carrito de Compras</title>
-    <link rel="stylesheet" href="../css/carrito_compra_style.css">
+    <title>Sneak Empire</title>
+    <link rel="stylesheet" href="../css/cart.css">
     <link rel="stylesheet" href="../css/header_style.css" />
     <link rel="stylesheet" href="../css/footer_style.css" />
 </head>
 
 <body>
     <main>
-        <div class="container">
+        <div class="Cartcontainer">
             <h1 class="cart-title">Mi carrito de compras (1)</h1>
 
             <div class="cashback">
-                <img src="../img/back arrow.png" alt="devolucion" class="return-arrow">
+                <img src="../img/backArrow.webp" alt="devolucion" class="return-arrow">
                 <span>Devolución gratuita hasta 30 días de recibir tu producto.</span>
             </div>
-            <!-- Izquierda: Producto -->
-            <div class="producto-vista">
-                <div class="cart-content">
-                    <div class="cart-item">
-                        <img src="../img/zap_ejemplo.jpg" alt="zapatillas" class="img-1">
+            <div style="display: flex;">
+                <!-- Izquierda: Producto -->
+                <div class="containerCart">
+                    <div class="producto-vista">
+                        <div class="cart-content">
+                            <div class="cart-item">
+                                <img src="../img/zap_ejemplo.jpg" alt="zapatillas" class="img-1">
+                            </div>
+                        </div>
+                    </div>
+                </div>                
+                <!-- Derecha: Resumen -->
+                <div class="resumen">
+                    <div class="promotion-section">
+                        <h3>Aplicar código de promoción</h3>
+                        <p>Introduce el código de promoción</p>
+                        <div class="promotion-input">
+                            <input type="text"/>
+                            <button>APLICAR</button>
+                        </div>
+                    </div>
+
+                    <div class="summary-section">
+                        <div class="summary-item">
+                            <span>Costo de envío</span>
+                            <span>Por calcular</span>
+                        </div>
+                        <div class="summary-item">
+                            <span>Descuento</span>
+                            <span>- s/ 0.00</span>
+                        </div>
+                        <div class="summary-total">
+                            <span>Total estimado</span>
+                            <span>s/ 97.30</span>
+                        </div>
+                        <small>Incluyendo IGV</small>
+                    </div>
+
+                    <div class="checkout-button">
+                        <button>CONTINUAR COMPRA</button>
                     </div>
                 </div>
             </div>
-            <!-- Derecha: Resumen -->
-            <div class="resumen">
-                <div class="promotion-section">
-                    <h3>Aplicar código de promoción</h3>
-                    <p>Introduce el código de promoción</p>
-                    <div class="promotion-input">
-                        <input type="text"/>
-                        <button>APLICAR</button>
-                    </div>
-                </div>
-
-                <div class="summary-section">
-                    <div class="summary-item">
-                        <span>Costo de envío</span>
-                        <span>Por calcular</span>
-                    </div>
-                    <div class="summary-item">
-                        <span>Descuento</span>
-                        <span>- s/ 0.00</span>
-                    </div>
-                    <div class="summary-total">
-                        <span>Total estimado</span>
-                        <span>s/ 97.30</span>
-                    </div>
-                    <small>Incluyendo IGV</small>
-                </div>
-
-                <div class="checkout-button">
-                    <button>CONTINUAR COMPRA</button>
-                </div>
-            </div>
+            
             <section class="security">
                 <h2>SIÉNTETE SEGURO CON TU COMPRA EN SNEAK EMPIRE</h2>
                 <div class="security-items">
                     <div class="item">
-                        <span class="icon">v</span>
-                        <p>Envío gratis por compras mayores a S/. 250</p>
+                        <span class="icon"><strong>V</strong></span>
+                        <sTRong><p>Envío gratis por compras mayores a S/. 250</p></sTRong>
                     </div>
                     <div class="item">
-                        <span class="icon">v</span>
-                        <p>Hasta 6 cuotas sin intereses</p>
+                        <span class="icon"><strong>V</strong></span>
+                        <strong><p>Hasta 6 cuotas sin intereses</p></strong>
                     </div>
                     <div class="item">
-                        <span class="icon">v</span>
-                        <p>Devolución gratuita y fácil hasta en 30 días</p>
+                        <span class="icon"><strong>V</strong></span>
+                        <strong><p>Devolución gratuita y fácil hasta en 30 días</p></strong>
                     </div>
                 </div>
             </section>
     </main>
-
+    <script src="../js/header.js"></script>
     <script src="../js/footer.js"></script>
     <script>
         loadFooter();
