Se agregaron detalles al json

--- a/html/info.html
+++ b/html/info.html
@@ -18,7 +18,7 @@
         <nav>
             <!--La 2da Barra-->
             <ul class="barra">
-                <b><li class="medio"><a class="letras"  href="">Lo nuevo</a></li></b>
+                <b><li class="medio"><a class="letras"  href="../html/lo-nuevo-PRUEBA.html">Lo nuevo</a></li></b>
                 <b><li class="medio"><a class="letras"  href="">Hombre</a></li></b>
                 <b><li class="medio"><a class="letras"  href="">Mujer</a></li></b>
                 <b><li class="medio"><a class="letras"  href="">Niños</a></li></b>
@@ -34,24 +34,34 @@
                     </div>
                 </div>
             </ul>
-
+            
         </nav>
 
-        <div class="cont">
+
+        <select id="selectorProductos">
+            <option value="">Selecciona un producto</option>
+            <option value="0">Sport Casual Easy-on</option>
+            <option value="1">Zapatillas Running Pro</option>
+            <!-- Agregar más opciones-->
+        </select>
+
+
+
+        <div class="cont">                            
             <div class="image-section">
-                <img src="../img/zapatillas.webp" alt="Zapatillas">
+                <img src="" alt="Zapatillas">
             </div>
             <div class="detalles">
-                <h1>Sport Casual Easy-on</h1>
-                <p class="price">S/. 169.00</p>
-                <h6><font color="gray">NIÑO ZAPATILLAS</font></h6>
-                <font color="gray"><h6><br>A12625C-0</h6></br></font>
+                <h1></h1>
+                <p class="price"></p>
+                <h6><font color="gray"></font></h6>
+                <h6><font color="gray"></font></h6> 
                 <font color="gray"><h5>Se el primero en valorar este producto</h5></font>
-                <br>Renueva las zapatillas con las Pro Blaze Vintage <font><a href="#">Más informacion</a><br></font>
+                <br>
+                <font><a href="#">Más informacion</a><br></font>
                 <br><h5>Color</h5>
-                <img src="../img/zapatilla-mini.webp" alt="zapatilla" height="75px" width="75px">
+                <img src="" alt="zapatilla" height="75px" width="75px">     
                 <hr size="1px" color="silver" />
-
                 <br><b><label for="size">Elige una talla:</label></b>
                 <select id="size">
                     <option value="36">36</option>
@@ -66,32 +76,34 @@
 
         <div class="descripcion">
             <hr size="1px" color="silver" />
-            <br><b>ESTILO DEPORTIVO Renueva las zapatillas con las Pro Blaze vintage. Los tejidos clasicos y los 
-            colores retro ofrecen un estilo ganador insipirado en la cancha.</b>
+            <br><b></b>
             <p>
                 <br>Detalles:
-                <ul>
-                    <li>Parte superior de piel resistente que añade el look robusto de las Pro Blaze</li>
-                    <li>Amortiguación de espuma suave bajo el pie que permite jugar con comodidad</li>
-                    <li>Cordones elasticos, correa regulable y tira en el talón para ponérselas y quitárselas fácilmente</li>
-                    <li>Lengüeza y zona del tobillo acolchadas para una mayor comodidad</li>
-                    <li>Logotipo de estrella y galón clásico y etiqueta cosida en la lengüeta para rendir homenaje al legado</li>
-                    <li>Categoria: Calzado</li>
-                    <li>Género: Niño</li>
-                    <li>Color: Negro</li>
-                    <li>Estilo: Urbano</li>
-                    <li>Material de suela: Canvas</li>
-                    <li>Superficie: Asfalto</li>
-                    <li>Tipo de Caña: Caña Baja</li><br>
-                </ul>
-                <hr size="2px" color="black" />
+                <ul></ul>
+                <hr size="1px" color="silver" />
             </p>
         </div>
 
         <script src="../js/footer.js"></script>
+
         <script>
         loadFooter();
         </script>
+
         <script src="../js/header.js"></script>
+
+        <script>
+            const selectorProductos = document.getElementById("selectorProductos");
+            selectorProductos.addEventListener("change", function () {
+                const indice = parseInt(selectorProductos.value); // Obtener el índice seleccionado
+                if (!isNaN(indice)) {
+                    mostrarProducto(productos[indice]); // Mostrar el producto seleccionado
+                }
+            });
+        </script>
+
+        <script src="../js/productos-info.js"></script>
+        <script src="../js/function-info.js"></script>
+
     </body>
 </html>
