Pequeña correcion del titulo del cart

--- a/html/cart.html
+++ b/html/cart.html
@@ -15,7 +15,7 @@
 <body>
     <main>
         <div class="Cartcontainer">
-            <h1 class="cart-title">Mi carrito de compras (1)</h1>
+            <h1 class="cart-title">Mi carrito de compras</h1>
 
             <div class="cashback">
                 <img src="../img/backArrow.webp" alt="devolucion" class="return-arrow">
