--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="../img/icon.ico" />
     <title>Sneak Empire</title>
-    <link rel="stylesheet" href="../css/slide_cart_style.css">
+    <link rel="stylesheet" href="../css/slide_cart_style.css" />
     <link rel="stylesheet" href="../css/nosotros_style.css" />
     <link rel="stylesheet" href="../css/header_style.css" />
     <link rel="stylesheet" href="../css/footer_style.css" />
@@ -15,7 +15,9 @@
       <section class="hero">
         <div class="hero-content">
           <h1 class="fade-in">Bienvenido a Sneak Empire</h1>
-          <h2 class="fade-in-2">Donde el estilo se encuentra con la comodidad</h2>
+          <h2 class="fade-in-2">
+            Donde el estilo se encuentra con la comodidad
+          </h2>
         </div>
       </section>
 
@@ -134,7 +136,7 @@
       </section>
     </main>
     <script src="../js/cart.js"></script>
-    <script>      
+    <script>
       loadSlideCart();
     </script>
     <script src="../js/footer.js"></script>
