Simulacion de compra terminada

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -20,6 +20,8 @@
       </script>
     </main>
 
+    <script src="../js/data.js"></script>
+
     <script src="../js/cart.js"></script>
 
     <script src="../js/slide-cart.js"></script>
