Actualice la lógica de representación en el carrito

--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="../img/icon.ico" />
     <title>Sneak Empire</title>
-<<<<<<< HEAD
-=======
     <link rel="stylesheet" href="../css/slide_cart_style.css" />
->>>>>>> c22e50bfc320f38ae2ceb84e7e0669353fc5edb4
     <link rel="stylesheet" href="../css/nosotros_style.css" />
     <link rel="stylesheet" href="../css/header_style.css" />
     <link rel="stylesheet" href="../css/footer_style.css" />
@@ -138,14 +135,14 @@
         </div>
       </section>
     </main>
-<<<<<<< HEAD
 
-=======
     <script src="../js/cart.js"></script>
+
+    <script src="../js/slide-cart.js"></script>
     <script>
       loadSlideCart();
     </script>
->>>>>>> c22e50bfc320f38ae2ceb84e7e0669353fc5edb4
+    
     <script src="../js/footer.js"></script>
     <script>
       loadFooter();
