--- a/html/redes.html
+++ b/html/redes.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../img/icon.ico">
     <title>Sneak Empire</title>
+    <link rel="stylesheet" href="../css/slide_cart_style.css" />
     <link rel="stylesheet" href="../css/redes_style.css">
     <link rel="stylesheet" href="../css/header_style.css">
     <link rel="stylesheet" href="../css/footer_style.css">
@@ -56,7 +57,12 @@
         </div>
     </div>
     
+    <script src="../js/cart.js"></script>
 
+    <script src="../js/slide-cart.js"></script>
+    <script>
+      loadSlideCart();
+    </script>
 
     <script src="../js/footer.js"></script>
     <script>
