Se implemento la conexion a la api de autenticacion

--- a/html/login.html
+++ b/html/login.html
@@ -121,6 +121,7 @@
         <div class="circle"></div>
       </div>
     </div>
+    <script src="../data/connectionAPI.js"></script>
     <script src="../js/login.js"></script>
   </body>
 </html>
