--- a/html/registro.html
+++ b/html/registro.html
@@ -133,6 +133,7 @@
         <div class="circle"></div>
       </div>
     </div>
+    <script src="../data/connectionAPI.js"></script>
     <script src="../js/registro.js"></script>
   </body>
 </html>
